force-app/main/default/objects/Property__c/fields/Age_Of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Age_Of_Construction__c</fullName>
    <formula>YEAR(TODAY())  -  YEAR(Property_completion_date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Of Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>