force-app/main/default/objects/Property__c/fields/Balconies__c.field-meta.xml
<CustomField>
    <fullName>Balconies__c</fullName>
    <label>Balconies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>