force-app/main/default/objects/Property__c/fields/carpetAreaUnit__c.field-meta.xml
<CustomField>
    <fullName>carpetAreaUnit__c</fullName>
    <label>carpetAreaUnit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AreaUnit</valueSetName>
    </valueSet>
</CustomField>