force-app/main/default/objects/Property__c/fields/Date_Sold_Rented__c.field-meta.xml
<CustomField>
    <fullName>Date_Sold_Rented__c</fullName>
    <label>Date Sold/Rented</label>
    <type>Date</type>
</CustomField>