force-app/main/default/objects/Property__c/fields/Floor_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_No__c</fullName>
    <label>Floor No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Floor_No</valueSetName>
    </valueSet>
</CustomField>