force-app/main/default/objects/Property__c/fields/Furnished_Status__c.field-meta.xml
<CustomField>
    <fullName>Furnished_Status__c</fullName>
    <label>Furnished Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Furnished_Status</valueSetName>
    </valueSet>
</CustomField>