force-app/main/default/objects/Property__c/fields/Indoor_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Indoor_Facilities__c</fullName>
    <label>Indoor Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indoor_Facilities</valueSetName>
    </valueSet>
</CustomField>