force-app/main/default/objects/Property__c/fields/isVerified__c.field-meta.xml
<CustomField>
    <fullName>isVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isVerified</label>
    <type>Checkbox</type>
</CustomField>