force-app/main/default/objects/Property__c/fields/Last_renovation_date__c.field-meta.xml
<CustomField>
    <fullName>Last_renovation_date__c</fullName>
    <label>Last renovation date</label>
    <type>Date</type>
</CustomField>