force-app/main/default/objects/Property__c/fields/Lease_Terms__c.field-meta.xml
<CustomField>
    <fullName>Lease_Terms__c</fullName>
    <label>Lease Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>