force-app/main/default/objects/Property__c/fields/Maintenance_Charges__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Charges__c</fullName>
    <label>Maintenance Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>