force-app/main/default/objects/Property__c/fields/Maintenance_Records__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Records__c</fullName>
    <label>Maintenance Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>