force-app/main/default/objects/Property__c/fields/Number_of_Parking__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parking__c</fullName>
    <label>Number of Parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>