force-app/main/default/objects/Property__c/fields/Outdoor_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Outdoor_Facilities__c</fullName>
    <label>Outdoor Facilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Outdoor_Facilities</valueSetName>
    </valueSet>
</CustomField>