force-app/main/default/objects/Property__c/fields/Plot_Breadth__c.field-meta.xml
<CustomField>
    <fullName>Plot_Breadth__c</fullName>
    <label>Plot Breadth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>