force-app/main/default/objects/Property__c/fields/Plot_Length__c.field-meta.xml
<CustomField>
    <fullName>Plot_Length__c</fullName>
    <label>Plot Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>