force-app/main/default/objects/Property__c/fields/Possession_Status__c.field-meta.xml
<CustomField>
    <fullName>Possession_Status__c</fullName>
    <label>Possession Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Possession_Status</valueSetName>
    </valueSet>
</CustomField>