force-app/main/default/objects/Property__c/fields/Price_Includes__c.field-meta.xml
<CustomField>
    <fullName>Price_Includes__c</fullName>
    <label>Price Includes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Price_Includes</valueSetName>
    </valueSet>
</CustomField>