force-app/main/default/objects/Property__c/fields/Property_Broker__c.field-meta.xml
<CustomField>
    <fullName>Property_Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Broker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties (Property Broker)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>