force-app/main/default/objects/Property__c/fields/Property_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Property_completion_date__c</fullName>
    <label>Property completion date</label>
    <type>Date</type>
</CustomField>