force-app/main/default/objects/Property__c/fields/Property_Condition__c.field-meta.xml
<CustomField>
    <fullName>Property_Condition__c</fullName>
    <label>Property Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Condition</valueSetName>
    </valueSet>
</CustomField>