force-app/main/default/objects/Property__c/fields/Security_Amount__c.field-meta.xml
<CustomField>
    <fullName>Security_Amount__c</fullName>
    <label>Security Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>