force-app/main/default/objects/Property__c/fields/Size_Area__c.field-meta.xml
<CustomField>
    <fullName>Size_Area__c</fullName>
    <label>Size/Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>