force-app/main/default/objects/Property__c/fields/Total_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Carpet_Area__c</fullName>
    <formula>TEXT(Carpet_Area__c)  &amp; &quot; &quot; &amp;   TEXT(carpetAreaUnit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Carpet Area</label>
    <type>Text</type>
</CustomField>