force-app/main/default/objects/Property__c/fields/Total_Covered_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Covered_Area__c</fullName>
    <formula>TEXT(Covered_Area__c )  &amp; &quot; &quot;  &amp;  TEXT( coveredAreaUnit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Covered Area</label>
    <type>Text</type>
</CustomField>