force-app/main/default/objects/Property__c/fields/Zoning_Information__c.field-meta.xml
<CustomField>
    <fullName>Zoning_Information__c</fullName>
    <label>Zoning Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>